--- a/index.css
+++ b/index.css
@@ -62,11 +62,9 @@ section {
 .bg-head {
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-position-x: center;
-    background-image: url(https://res.cloudinary.com/s3ansh33p/image/upload/fl_lossy,f_auto,c_scale,w_1920/v1640797745/Classpad/20211229_180653_vvwkat.webp);
-    opacity: 0.1;
+    background-color: hsl(240, 10%, 3.9%);
 }
+
 
 #loading {
     margin-left: -4px;
